# supertonic-tts-rust

./: .gitignore  README.md  gradle.properties  settings.gradle
.github/workflows/: ci.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/davnozdu/supertonicrust/: AssetDownloader.kt  CheckDataActivity.kt  MainActivity.kt  SupertonicRust.kt
app/src/main/java/com/davnozdu/supertonicrust/accent/: AccentDictionaryManager.kt  BinaryAccentDictionary.kt
app/src/main/java/com/davnozdu/supertonicrust/service/: SupertonicRustService.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: tts_engine.xml
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/engine/: inference.rs  mod.rs
rust/src/pipeline/: accent_dict.rs  lexicon.rs  mod.rs  numbers_ru.rs  yofication.rs
